--- a/index.html
+++ b/index.html
@@ -520,6 +520,15 @@
             </div>
         </div>
     </footer>
+    <!-- End footer -->
+
+    <div class="big-photo position-fixed w-100 top-0 start-0 align-items-center justify-content-center">
+        <div class="filter"></div>
+        <div class="big-photo-item position-relative">
+            <img src="" alt="gallery.png" class="big-photo__img position-absolute top-0 start-0 w-100 h-100">
+        </div>
+        <button class="close__photo">Закрыть</button>
+    </div>
     
     <script src="assets/js/libs/fc-core.js"></script>
     <script src="assets/js/libs/fc-inter.js"></script>
