--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Экскурсии</title>
     <link rel="shortcut icon" href="assets/img/svg/logo-c.svg" type="image/x-icon">
+    <link rel="stylesheet" href="assets/styles/libs/carousel.css">
+    <link rel="stylesheet" href="assets/styles/libs/carousel-thema.css">
     <link rel="stylesheet" href="assets/styles/libs/fc-core.css">
     <link rel="stylesheet" href="assets/styles/libs/fc-daygrid.css">
     <link rel="stylesheet" href="assets/styles/libs/fc-timegrid.css">
@@ -174,6 +176,47 @@
     </section>
     <!-- End section -->
 
+    <section class="route">
+        <div class="container">
+            <div class="row d-flex align-items-center">
+                <div class="col-lg-6 col-md-6 col-12">
+                    <h2 class="title__text">Описание маршрута</h2>
+                    <ul class="">
+                        <li class="route__list">Город Гагра, Колоннада, ресторан "Гагрипш", Парк принца Ольденбурского;</li>
+                        <li class="route__list">Смотровая площадка "Прощай Родина", "Чабгарский" карниз, Подвесной мост через реку "Бзыбь";</li>
+                        <li class="route__list">Дегустация сыра, меда, вина, чачи (входит в стоимость экскурсии), Голубое Озеро, Юпшарский каньон ("Каменный мешок"), Озеро "Рица", Водопады "Девичьи и мужские слезы".</li>
+                    </ul>
+
+                    <h4 class="route__item-text">Далее на выбор:</h4>
+                    
+                    <ul class="">
+                        <li class="route__list">Город Гагра, Колоннада, ресторан "Гагрипш", Парк принца Ольденбурского;</li>
+                        <li class="route__list">Смотровая площадка "Прощай Родина", "Чабгарский" карниз, Подвесной мост через реку "Бзыбь";</li>
+                        <li class="route__list">Дегустация сыра, меда, вина, чачи (входит в стоимость экскурсии), Голубое Озеро, Юпшарский каньон ("Каменный мешок"), Озеро "Рица", Водопады "Девичьи и мужские слезы".</li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 offset-lg-2 col-md-5 offset-md-1 col-10 pb-5 mt-0 mt-5">
+                    <div class="carousel">
+                        <div class="owl-carousel owl-theme">
+                            <div class="item position-relative">
+                                <img class="carousel__img" src="assets/img/png/5.png" alt="">
+                                <p class="item__text">Гагра</p>
+                            </div>
+                            <div class="item position-relative">
+                                <img class="carousel__img" src="assets/img/png/7.png" alt="">
+                                <p class="item__text">Коллонада</p>
+                            </div>
+                            <div class="item position-relative">
+                                <img class="carousel__img" src="assets/img/png/6.png" alt="">
+                                <p class="item__text">Гагра</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Ensection -->
     <section class="costs">
         <div class="container">
             <div class="row">
@@ -397,6 +440,96 @@
     </section>
     <!-- End gallery-->
 
+    <section class="reviews">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 d-flex align-items-center justify-content-between">
+                    <h2 class="title__text">Отзывы</h2>
+                    <button class="openAll"><span class="openAll__text">Смотреть все</span></button>
+                </div>
+
+                <div class="row">
+                <div class="col-md-9 col-sm-11 col-10">
+                    <div class="reviews-carousel">
+                        <div class="owl-carousel owl-theme">
+                            <div class="item">
+                                <div class="d-flex align-items-center justify-content-center">
+                                    <div class="reviews-item d-flex align-items-start justify-content-between">
+                                        <div class="review-photo position-relative">
+                                            <img src="assets/img/png/review1.png" alt="" class="review-photo__png position-absolute top-0 start-0 w-100 h-100">
+                                        </div>
+                                        <div class="">
+                                            <h4 class="reviews-item__title">Иван Иванов, 25 лет</h4>
+                                            <p class="reviews-item__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Наш большого переулка решила переписывается свой текст даль, свою то составитель рукопись которое города коварный языком заглавных но меня назад, если жаренные повстречался однажды текста!</p>
+                                        </div>
+                                        <img src="assets/img/png/quotation-marks.png" alt="" class="quotation-marks">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="d-flex align-items-center justify-content-center">
+                                    <div class="reviews-item d-flex align-items-start justify-content-between">
+                                        <div class="review-photo position-relative">
+                                            <img src="assets/img/png/review2.png" alt="" class="review-photo__png position-absolute top-0 start-0 w-100 h-100">
+                                        </div>
+                                        <div class="">
+                                            <h4 class="reviews-item__title">Иван Иванов, 25 лет</h4>
+                                            <p class="reviews-item__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Наш большого переулка решила переписывается свой текст даль, свою то составитель рукопись которое города коварный языком заглавных но меня назад, если жаренные повстречался однажды текста!</p>
+                                        </div>
+                                        <img src="assets/img/png/quotation-marks.png" alt="" class="quotation-marks">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="d-flex align-items-center justify-content-center">
+                                    <div class="reviews-item d-flex align-items-start justify-content-between">
+                                        <div class="review-photo position-relative">
+                                            <img src="assets/img/png/6.png" alt="" class="review-photo__png position-absolute top-0 start-0 w-100 h-100">
+                                        </div>
+                                        <div class="">
+                                            <h4 class="reviews-item__title">Иван Иванов, 25 лет</h4>
+                                            <p class="reviews-item__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Наш большого переулка решила переписывается свой текст даль, свою то составитель рукопись которое города коварный языком заглавных но меня назад, если жаренные повстречался однажды текста!</p>
+                                        </div>
+                                        <img src="assets/img/png/quotation-marks.png" alt="" class="quotation-marks">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="d-flex align-items-center justify-content-center">
+                                    <div class="reviews-item d-flex align-items-start justify-content-between">
+                                        <div class="review-photo position-relative">
+                                            <img src="assets/img/png/review1.png" alt="" class="review-photo__png position-absolute top-0 start-0 w-100 h-100">
+                                        </div>
+                                        <div class="">
+                                            <h4 class="reviews-item__title">Иван Иванов, 25 лет</h4>
+                                            <p class="reviews-item__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Наш большого переулка решила переписывается свой текст даль, свою то составитель рукопись которое города коварный языком заглавных но меня назад, если жаренные повстречался однажды текста!</p>
+                                        </div>
+                                        <img src="assets/img/png/quotation-marks.png" alt="" class="quotation-marks">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="d-flex align-items-center justify-content-center">
+                                    <div class="reviews-item d-flex align-items-start justify-content-between">
+                                        <div class="review-photo position-relative">
+                                            <img src="assets/img/png/review2.png" alt="" class="review-photo__png position-absolute top-0 start-0 w-100 h-100">
+                                        </div>
+                                        <div class="">
+                                            <h4 class="reviews-item__title">Иван Иванов, 25 лет</h4>
+                                            <p class="reviews-item__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Наш большого переулка решила переписывается свой текст даль, свою то составитель рукопись которое города коварный языком заглавных но меня назад, если жаренные повстречался однажды текста!</p>
+                                        </div>
+                                        <img src="assets/img/png/quotation-marks.png" alt="" class="quotation-marks">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="form">
         <div class="form-photo position-relative">
             <img src="assets/img/png/form.png" alt="" class="form-photo__png position-absolute top-0 start-0 w-100 h-100">
@@ -530,11 +663,14 @@
         <button class="close__photo">Закрыть</button>
     </div>
     
+    <script src="assets/js/libs/jquery.js"></script>
+    <script src="assets/js/libs/carousel.js"></script>
     <script src="assets/js/libs/fc-core.js"></script>
     <script src="assets/js/libs/fc-inter.js"></script>
     <script src="assets/js/libs/fc-daygrid.js"></script>
     <script src="assets/js/libs/fc-timegrid.js"></script>
     <script src="assets/js/libs/fc-list.js"></script>
+    <script src="assets/bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
     <script src="assets/js/index.js"></script>
 
 </body>
