--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                             <p class="description-card__text">Новоафинская пещера</p>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-6 col-sm-4 col-6 mt-md-5 mt-sm-0 d-flex justify-content-center tab_card">
+                <div class="col-lg-2 col-sm-6 col-6 d-flex justify-content-center tab tab_card">
                     <div class="description-card d-flex justify-content-center align-items-center flex-column text-center position-relative">
                         <div class="circle"></div>
                         <div class="filter position-absolute top-0 start-0 w-100 h-100"></div>
@@ -313,7 +313,7 @@
                             <p class="description-card__text">Термальный источник</p>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-6 col-sm-4 col-12 mt-md-5 mt-sm-0 d-flex justify-content-center tab_card">
+                <div class="col-lg-2 col-sm-6 col-12 d-flex justify-content-center tab tab_card">
                     <div class="description-card position-relative d-flex justify-content-center align-items-center flex-column">
                         <div class="circle"></div>
                         <div class="filter position-absolute top-0 start-0 w-100 h-100"></div>
