--- a/index.html
+++ b/index.html
@@ -715,8 +715,31 @@
 
     <div class="big-photo position-fixed w-100 top-0 start-0 align-items-center justify-content-center">
         <div class="filter"></div>
-        <div class="big-photo-item position-relative">
-            <img src="" alt="gallery.png" class="big-photo__img position-absolute top-0 start-0 w-100 h-100">
+        <div class="owl-carousel owl-theme big-photo-item position-relative">
+            <div class="item">
+                <img src="assets/img/png/1.png" alt="gallery.png" class="big-photo__img position-absolute top-0 start-0 w-100 h-100">
+            </div>
+            <div class="item">
+                <img src="assets/img/png/2.png" alt="gallery.png" class="big-photo__img position-absolute top-0 start-0 w-100 h-100">
+            </div>
+            <div class="item">
+                <img src="assets/img/png/3.png" alt="gallery.png" class="big-photo__img position-absolute top-0 start-0 w-100 h-100">
+            </div>
+            <div class="item">
+                <img src="assets/img/png/4.png" alt="gallery.png" class="big-photo__img position-absolute top-0 start-0 w-100 h-100">
+            </div>
+            <div class="item">
+                <img src="assets/img/png/5.png" alt="gallery.png" class="big-photo__img position-absolute top-0 start-0 w-100 h-100">
+            </div>
+            <div class="item">
+                <img src="assets/img/png/6.png" alt="gallery.png" class="big-photo__img position-absolute top-0 start-0 w-100 h-100">
+            </div>
+            <div class="item">
+                <img src="assets/img/png/7.png" alt="gallery.png" class="big-photo__img position-absolute top-0 start-0 w-100 h-100">
+            </div>
+            <div class="item">
+                <img src="assets/img/png/8.png" alt="gallery.png" class="big-photo__img position-absolute top-0 start-0 w-100 h-100">
+            </div>
         </div>
         <button class="close__photo">Закрыть</button>
     </div>
